--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -41,3 +41,21 @@
 .databox .row .col {
     min-width: 33vw;
 }
+
+@keyframes vibrate {
+    0%,100% {
+        transform: translateX(0);
+    }
+    10%,30%,50%,70% {
+        transform: translateX(-10px);
+    }
+    20%,40%,60% {
+        transform: translateX(10px);
+    }
+    80% {
+        transform: translateX(7px);
+    }
+    90% {
+        transform: translateX(-7px);
+    }
+}
